--- a/_notebooks/2020-12-22-Day2-OpenCVTutorial.ipynb
+++ b/_notebooks/2020-12-22-Day2-OpenCVTutorial.ipynb
@@ -16,18 +16,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import cv2\n",
-    "import argparse\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 160,
    "metadata": {},
    "outputs": [],
@@ -38,6 +26,18 @@
     "#$ python file-name.py --image01 image01.png --image02 image02.png --image03 image03.png\n",
     "# in ap.add_arrgument use : required = True + remove default path\n",
     "#args = vars(ap.parse_args())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import cv2\n",
+    "import argparse\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -207,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Resizing a image\n",
+    "## 4. Resizing an image\n",
     " - In the case of deep learning, we often resize images, ignoring aspect ratio, so that the volume fits into a network which requires that an image be square and of a certain dimension."
    ]
   },
@@ -718,15 +718,6 @@
     "# References\n",
     "\n",
     "> https https://www.pyimagesearch.com/2018/07/19/opencv-tutorial-a-guide-to-learn-opencv/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#"
    ]
   }
  ],
