--- a/_notebooks/2020-12-22-Day1_Face_Detection_OpenCV.ipynb
+++ b/_notebooks/2020-12-22-Day1_Face_Detection_OpenCV.ipynb
@@ -235,36 +235,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> https: https://www.pyimagesearch.com/2018/02/26/face-detection-with-opencv-and-deep-learning/"
+    "> https https://www.pyimagesearch.com/2018/02/26/face-detection-with-opencv-and-deep-learning/"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> https: https://realpython.com/command-line-interfaces-python-argparse/"
+    "> https https://realpython.com/command-line-interfaces-python-argparse/"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> https: https://medium.com/@data.scientist/ipython-trick-how-to-use-argparse-in-ipython-notebooks-a07423ab31fc"
+    "> https https://medium.com/@data.scientist/ipython-trick-how-to-use-argparse-in-ipython-notebooks-a07423ab31fc"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> https: https://www.pyimagesearch.com/2018/03/12/python-argparse-command-line-arguments/"
+    "> https https://www.pyimagesearch.com/2018/03/12/python-argparse-command-line-arguments/"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
