--- a/_notebooks/2020-12-22-Similarity_Images.ipynb
+++ b/_notebooks/2020-12-22-Similarity_Images.ipynb
@@ -105,6 +105,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compute MSE and SSI "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 162,
    "metadata": {},
