--- a/_notebooks/2020-12-22-Similarity_Images.ipynb
+++ b/_notebooks/2020-12-22-Similarity_Images.ipynb
@@ -27,6 +27,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Load images"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 157,
    "metadata": {},
@@ -108,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compute MSE and SSI "
+    "## 2. Compute MSE and SSI "
    ]
   },
   {
