--- a/_notebooks/2020-12-22-Day1_Face_Detection_OpenCV.ipynb
+++ b/_notebooks/2020-12-22-Day1_Face_Detection_OpenCV.ipynb
@@ -186,6 +186,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tune model by varying threshold for edge detection."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -223,12 +230,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "References:"
+    "#### References:"
    ]
   },
   {
