--- a/_notebooks/2020-12-23-Gifs_PIL.ipynb
+++ b/_notebooks/2020-12-23-Gifs_PIL.ipynb
@@ -55,7 +55,14 @@
    "source": [
     "### Sliding window and ROIs for an image with three hierachical pyramids\n",
     "\n",
-    "![](images/keras_detection/sliding_window_sw.gif) ![](images/keras_detection/sliding_window_rois.gif)"
+    "![](images/keras_detection/sliding_window_sw.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/keras_detection/sliding_window_rois.gif)"
    ]
   }
  ],
