--- a/_notebooks/2020-12-23-Classifier2ObjectDetection.ipynb
+++ b/_notebooks/2020-12-23-Classifier2ObjectDetection.ipynb
@@ -204,13 +204,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For more information, along with a detailed code review check out the following posts on the PyImageSearch.com blog:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -303,7 +296,14 @@
     "\n",
     "Sliding window and ROIs for an image with three hierachical pyramids.\n",
     "\n",
-    "![](images/keras_detection/sliding_window_sw.gif) ![](images/keras_detection/sliding_window_rois.gif)"
+    "![](images/keras_detection/sliding_window_sw.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/keras_detection/sliding_window_rois.gif)"
    ]
   },
   {
