--- a/_notebooks/2020-12-22-Day2-OpenCVTutorial.ipynb
+++ b/_notebooks/2020-12-22-Day2-OpenCVTutorial.ipynb
@@ -752,7 +752,7 @@
     "#plt.imshow(image)\n",
     "i = 0\n",
     "plt.imshow(image)\n",
-    "filename = \"images/cv2_tut/my_image_\"+\"{:.2f}\".format(i) +\".jpg\"\n",
+    "filename = \"images/cv2_tut/my_image_\"+\"{:02d}\".format(i) +\".jpg\"\n",
     "cv2.imwrite(filename, image)"
    ]
   },
