--- a/_notebooks/2020-12-22-Similarity_Images.ipynb
+++ b/_notebooks/2020-12-22-Similarity_Images.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,6 +60,26 @@
     "img_contrast = cv2.cvtColor(img_contrast, cv2.COLOR_BGR2RGB)\n",
     "img_erased   = cv2.cvtColor(img_erased, cv2.COLOR_BGR2RGB)\n",
     "img_failed   = cv2.cvtColor(img_failed, cv2.COLOR_BGR2RGB)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3968, 2976, 3)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img_original.shape"
    ]
   },
   {
