--- a/_notebooks/2020-12-27-selectiveSearchOpenCV.ipynb
+++ b/_notebooks/2020-12-27-selectiveSearchOpenCV.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 3. Region proposal algorithm should:\n",
+    "## 3. Region proposal algorithm needs\n",
     "\n",
     "- Be faster and more efficient than sliding windows and image pyramids\n",
     "- Accurately detect the regions of an image that could contain an object\n",
