--- a/_notebooks/2020-12-27-selectiveSearchOpenCV.ipynb
+++ b/_notebooks/2020-12-27-selectiveSearchOpenCV.ipynb
@@ -202,12 +202,13 @@
     "        cv2.rectangle(output, (x, y), (x + w, y + h), color, 2)\n",
     "\n",
     "    # show the output image\n",
-    "    cv2.imshow(\"Output\", output) #plt.imshow(\"selectiveSearch.jpg\") #cv2.imshow(\"Output\", output)\n",
-    "    key = cv2.waitKey(0) & 0xFF\n",
+    "    #cv2.imshow(\"Output\", output) \n",
+    "    plt.imshow(output) #cv2.imshow(\"Output\", output)\n",
+    "    #key = cv2.waitKey(0) & 0xFF\n",
     "\n",
     "    # if the `q` key was pressed, break from the loop\n",
-    "    if key == ord(\"q\"):\n",
-    "        break"
+    "    #if key == ord(\"q\"):\n",
+    "    #    break"
    ]
   },
   {
