--- a/_notebooks/2020-12-27-selectiveSearchOpenCV.ipynb
+++ b/_notebooks/2020-12-27-selectiveSearchOpenCV.ipynb
@@ -215,6 +215,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## References\n",
+    "\n",
+    "> References: https://www.pyimagesearch.com/2020/06/29/opencv-selective-search-for-object-detection/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "![](images/dlui01_selectiveSearch.png)"
    ]
   }
