--- a/_notebooks/2020-12-27-RegionProposalAlgo-ObjectDetection.ipynb
+++ b/_notebooks/2020-12-27-RegionProposalAlgo-ObjectDetection.ipynb
@@ -446,6 +446,15 @@
     "    #cv2.imshow(\"After\", clone)\n",
     "    #cv2.waitKey(0)    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "\n",
+    "> https://www.pyimagesearch.com/2020/07/06/region-proposal-object-detection-with-opencv-keras-and-tensorflow/"
+   ]
   }
  ],
  "metadata": {
