--- a/_notebooks/2020-12-22-Day2-OpenCVTutorial.ipynb
+++ b/_notebooks/2020-12-22-Day2-OpenCVTutorial.ipynb
@@ -760,7 +760,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# References\n",
+    "## References\n",
     "\n",
     "> https https://www.pyimagesearch.com/2018/07/19/opencv-tutorial-a-guide-to-learn-opencv/"
    ]
