--- a/_notebooks/2021-01-12-cyclical_learning_rate.ipynb
+++ b/_notebooks/2021-01-12-cyclical_learning_rate.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Probleme mit gewöchnlichen Lernraten\n",
+    "## 1. Probleme mit gewöchnlichen Lernraten\n",
     "\n",
     "   - Wir wissen nicht was das optimale anfängliche Rate des Modelles ist\n",
     "   - Eine monotone abnehmende Lernrate kann dazu führen dass unser Modell in Plateaus der Verlustsfunktion-Landschaft \"stecken bleibt\"\n",
@@ -53,7 +53,7 @@
     "   - Aus Sattelpunkten und lokalen Minima auszubrechen\n",
     "   \n",
     "   \n",
-    "## Zyklische Lernrate verfolgen einen anderen Ansatz\n",
+    "## 2. Zyklische Lernrate verfolgen einen anderen Ansatz\n",
     "   -  Eine minimale Lernrate definieren\n",
     "   -  Eine maximale Lernrate definieren\n",
     "   -  Lernrate soll zyklisch zwischen den beiden Grenzen oszillieren\n",
@@ -61,14 +61,14 @@
     "In der Praxis führt die Anwendung zyklischer Lernraten zu schnellerer Konvergenz, und das wird erzielt mit weniger Experimenten/Hyperparameter-Updates. \n",
     "Wenn man eine zyklische Lernrate im Kombination mit dem initial learning rate Ansatz verwenden führt dies zu einer Situation, in der fürs Modell nur sehr wening Feinsteurung den Parametern notwendig sei. \n",
     "\n",
-    "![](cyclical_learningRate.png)"
+    "![](images/cyclical_learningRate.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Die \"dreieckige\" Politik\n",
+    "## 3. Die \"dreieckige\" Politik\n",
     "\n",
     "![](images/triangular_policy.png)"
    ]
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Die \"dreieckige2\" Politik\n",
+    "## 4. Die \"dreieckige2\" Politik\n",
     "![](images/triangular2_policy.png)"
    ]
   },
@@ -85,8 +85,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Die \"exp_range\" Politik\n",
-    "![](images/exprange_policy.png)"
+    "## 5. Die \"exp_range\" Politik\n",
+    "![](images/exp_range_policy.png)"
    ]
   },
   {
