--- a/_notebooks/2021-01-12-cyclical_learning_rate.ipynb
+++ b/_notebooks/2021-01-12-cyclical_learning_rate.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Probleme mit gewöchnlichen Lernraten\n",
+    "## 1. Probleme mit herkömmlichen Lernraten\n",
     "\n",
     "   - Wir wissen nicht was das optimale anfängliche Rate des Modelles ist\n",
     "   - Eine monotone abnehmende Lernrate kann dazu führen dass unser Modell in Plateaus der Verlustsfunktion-Landschaft \"stecken bleibt\"\n",
@@ -53,7 +53,8 @@
     "   - Aus Sattelpunkten und lokalen Minima auszubrechen\n",
     "   \n",
     "   \n",
-    "## 2. Zyklische Lernrate verfolgen einen anderen Ansatz\n",
+    "## 2. Zyklische Lernrate \n",
+    "Zyklische Lernrate verfolgen einen anderen Ansatz. Sie sind durch drei Paramter:\n",
     "   -  Eine minimale Lernrate definieren\n",
     "   -  Eine maximale Lernrate definieren\n",
     "   -  Lernrate soll zyklisch zwischen den beiden Grenzen oszillieren\n",
@@ -468,6 +469,13 @@
     "\n",
     "> www: https://www.pyimagesearch.com/2019/10/07/is-rectified-adam-actually-better-than-adam/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
