--- a/_notebooks/2021-01-12-cyclical_learning_rate.ipynb
+++ b/_notebooks/2021-01-12-cyclical_learning_rate.ipynb
@@ -53,7 +53,7 @@
     "   - Aus Sattelpunkten und lokalen Minima auszubrechen\n",
     "   \n",
     "   \n",
-    "## 2. Zyklische Lernrate \n",
+    "## 2. z Die yklische Lernrate \n",
     "Zyklische Lernrate verfolgen einen anderen Ansatz. Sie sind durch drei Paramter:\n",
     "   -  Eine minimale Lernrate definieren\n",
     "   -  Eine maximale Lernrate definieren\n",
