--- a/_notebooks/2021-01-12-cyclical_learning_rate.ipynb
+++ b/_notebooks/2021-01-12-cyclical_learning_rate.ipynb
@@ -53,8 +53,8 @@
     "   - Aus Sattelpunkten und lokalen Minima auszubrechen\n",
     "   \n",
     "   \n",
-    "## 2. z Die yklische Lernrate \n",
-    "Zyklische Lernrate verfolgen einen anderen Ansatz. Sie sind durch drei Paramter:\n",
+    "## 2. Die zyklische Lernrate \n",
+    "Die zyklische Lernrate verfolgen einen anderen Ansatz. Sie ist durch drei Paramter gekennzeichnet:\n",
     "   -  Eine minimale Lernrate definieren\n",
     "   -  Eine maximale Lernrate definieren\n",
     "   -  Lernrate soll zyklisch zwischen den beiden Grenzen oszillieren\n",
