--- a/_notebooks/2021-01-12-cyclical_learning_rate.ipynb
+++ b/_notebooks/2021-01-12-cyclical_learning_rate.ipynb
@@ -464,18 +464,11 @@
    "source": [
     "## References\n",
     "\n",
-    "> Adrian Rosebrock, OpenCV Face Recognition, PyImageSearch, https://www.pyimagesearch.com/, accessed on 3, January, 2021\n",
+    "> Adrian Rosebrock, OpenCV Face Recognition, PyImageSearch, https://www.pyimagesearch.com/, accessed on 3 January, 2021\n",
     "\n",
     "\n",
     "> www: https://www.pyimagesearch.com/2019/10/07/is-rectified-adam-actually-better-than-adam/"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
