--- a/_notebooks/2020-12-27-selectiveSearchOpenCV.ipynb
+++ b/_notebooks/2020-12-27-selectiveSearchOpenCV.ipynb
@@ -10,7 +10,7 @@
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [Imaging Processing, OpenCV]\n",
+    "- categories: [Image Processing, OpenCV]\n",
     "- image: images/chart-preview.png"
    ]
   },
