--- a/_notebooks/2020-12-23-Gifs_PIL.ipynb
+++ b/_notebooks/2020-12-23-Gifs_PIL.ipynb
@@ -10,7 +10,7 @@
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [image processing, PIL]\n",
+    "- categories: [Image Processing, PIL]\n",
     "- image: images/chart-preview.png"
    ]
   },
