--- a/_notebooks/2020-12-22-Day1_Face_Detection_OpenCV.ipynb
+++ b/_notebooks/2020-12-22-Day1_Face_Detection_OpenCV.ipynb
@@ -10,7 +10,7 @@
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [ Deep Learning, Computer Vision]\n",
+    "- categories: [OpenCV]\n",
     "- image: images/chart-preview.png"
    ]
   },
