--- a/_notebooks/2021-01-07-save_model_keras.ipynb
+++ b/_notebooks/2021-01-07-save_model_keras.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Save and load model with Keras using h5 format\n",
+    "# Keras save and load model using h5 format\n",
     "> Save and load model with Keras.\n",
     "\n",
     "- toc: true \n",
