--- a/_notebooks/2021-01-07-load_model_pred_keras.ipynb
+++ b/_notebooks/2021-01-07-load_model_pred_keras.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load model and predict with Keras\n",
+    "# Keras load model and predict\n",
     "> Load model and predict with Keras.\n",
     "\n",
     "- toc: true \n",
