--- a/_notebooks/2021-01-04-learning_rate_finder.ipynb
+++ b/_notebooks/2021-01-04-learning_rate_finder.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Learning Rate Finder \n",
+    "# Keras learning Rate Finder \n",
     "> Automatically find optimal initial learning rate. See references.\n",
     "\n",
     "- toc: true \n",
