--- a/_notebooks/2021-01-07-keras-starting-stoping-resuming.ipynb
+++ b/_notebooks/2021-01-07-keras-starting-stoping-resuming.ipynb
@@ -270,7 +270,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Callbacks  \n"
+    "## 7. Callbacks  \n",
+    "\n",
+    "The models will be saved in hdf5 format. This only stores the weights of the model, so the arhictecture and rest of the parameters are not required. To save the whole model one needs to use h5 format."
    ]
   },
   {
