--- a/_notebooks/2021-01-19-input_shape_keras.ipynb
+++ b/_notebooks/2021-01-19-input_shape_keras.ipynb
@@ -123,13 +123,14 @@
     " \n",
     "## 5. Wenn das Bild zu klein ist:\n",
     " - Wenn die Größe des Entritt-Bildes zu klein ist, die Volumendimensionen während der Forward-Propagation wird sich reduzieren und dann gehen dem Modell die Daten \"aus\"\n",
+    " - Fehlermeldung kommt raus\n",
     " \n",
     "## 6. Wenn das Bild zu groß ist:\n",
     " - Man wird keine Fehler an sich feststellen, aber es kann sein, dass das Netz keine angemessene Genauigkeit erreicht, weil nicht genügend Schichten im Netzwerk vorhanden sind um:\n",
     "\n",
     "     - Robuste, diskriminierende Filter zu lernen\n",
     "     - Die Größe des Volumens durch Pooling oder Strided Convolution natürlich zu schrumpfen\n",
-    "     \n",
+    "  -  Keine Fehlermeldung  \n",
     "Lösungen:\n",
     "   - Finde ein anderes Modell das eine größere Eintritt-Bildgröße hat\n",
     "   - Hyperparameter- Anpanssung ausprobieren\n",
@@ -220,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Laden des Modelles: VGG16, ohne Ausgangsschicht\n",
+    "## 8. Laden des Modelles: VGG16, ohne Ausgangsschicht\n",
     "   - ursprüngliches Modell war trainiert für Bildergröße von (224, 224, 3) \n",
     "   \n",
     "Two steps to work with diffrent size images: \n",
